--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 											<p>Made by Tengis</p>
 			<li><a href='./Repository/Calculator/index.html' target="_blank">Calculator</a></li>
 			<li><a href='./Repository/StopWatch/callback.html' target="_blank">Stopwatch</a></li>
-			<li><a href='./Repository/Dice/index.html' target="_blank">Dice</a></li>
-			<li><a href='./Repository/Budget/index.html' target="_blank">Budget</a></li>
-			<li><a href='./Repository/Budget but Better/index.html' target="_blank">Better Budget</a></li>
 			<li><a href='./Repository/background color changer/callback.html' target="_blank">Color Changer</a></li>
 			<li><a href='./Repository/todo/index.html' target="_blank">To Do</a></li>
+			<li><a href='./Repository/gif/gif.html' target="_blank">Gif Search Engine</a></li>
+			<li><a href='./Repository/slide/callback.html' target="_blank">Slide</a></li>
+			<li><a href='./Repository/counter/index.html' target="_blank">Counter</a></li>
 		</div>
 	</div>
     <script type="text/javascript" src="main.js"></script>
