--- a/Repository/slide/callback.html
+++ b/Repository/slide/callback.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>color changer</title>
+    <title>Slide</title>
     <link rel="stylesheet" href="./main.css">
 </head>
 <body>
