--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
+		<p class="about">Minii neriig Tengis gedeg bi Huree-Tulge surguulid surdag. Bi 13 nastai.</p>
 	<div class="main">
+
 		<div class="container">
 											<p>Made by Tengis</p>
 			<li><a href='./Repository/Calculator/index.html' target="_blank">Calculator</a></li>
